application/brennoflavio/proxitok/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxitok
  namespace: proxitok
  labels:
    app: proxitok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxitok
  template:
    metadata:
      labels:
        app: proxitok
    spec:
      containers:
      - name: proxitok
        image: ghcr.io/pablouser1/proxitok:master
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1000Mi
          requests:
            cpu: 200m
            memory: 256Mi
