application/brennoflavio/proxitok/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxitok
  namespace: proxitok
  labels:
    app: proxitok
spec:
  selector:
    app: proxitok
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
