application/brennoflavio/proxitok/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxitok
  namespace: proxitok
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
  - host: proxitok.brennoflavio.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxitok
            port:
              number: 80
  tls:
  - hosts:
    - proxitok.brennoflavio.com.br
    secretName: proxitok-tls
